--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
     mavenCentral()
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.7'
+}
+
 dependencies {
 
     compile "org.springframework:spring-context:$springVersion",
