--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     repositories {
-        mavenCentral()
+        maven {
+            url "https://nexus1.ci.quickbaserocks.com/nexus/content/repositories/central/"
+        }
     }
 }
 
